tests/baselines/reference/equalityStrictNulls.errors.txt
equalityStrictNulls.ts(37,9): error TS2845: This condition will always return 'true'.
equalityStrictNulls.ts(43,9): error TS2845: This condition will always return 'true'.
equalityStrictNulls.ts(59,13): error TS18050: The value 'undefined' cannot be used here.
equalityStrictNulls.ts(61,13): error TS18050: The value 'undefined' cannot be used here.
equalityStrictNulls.ts(63,14): error TS18050: The value 'undefined' cannot be used here.
equalityStrictNulls.ts(65,14): error TS18050: The value 'undefined' cannot be used here.


==== equalityStrictNulls.ts (6 errors) ====
    function f1(x: string) {
        if (x == undefined) {
        }
        if (x != undefined) {
        }
        if (x === undefined) {
        }
        if (x !== undefined) {
        }
        if (x == null) {
        }
        if (x != null) {
        }
        if (x === null) {
        }
        if (x !== null) {
        }
        if (undefined == x) {
        }
        if (undefined != x) {
        }
        if (undefined === x) {
        }
        if (undefined !== x) {
        }
        if (null == x) {
        }
        if (null != x) {
        }
        if (null === x) {
        }
        if (null !== x) {
        }
    }
    
    function f2() {
        if (undefined == undefined) {
            ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2845: This condition will always return 'true'.
        }
        if (undefined == null) {
        }
        if (null == undefined) {
        }
        if (null == null) {
            ~~~~~~~~~~~~
!!! error TS2845: This condition will always return 'true'.
        }
    }
    
    function f3(a: number, b: boolean, c: { x: number }, d: number | string) {
        if (a == null) {
        }
        if (b == null) {
        }
        if (c == null) {
        }
        if (d == null) {
        }
    }
    
    function f4(x: number) {
        if (x > undefined) {
                ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
        }
        if (x < undefined) {
                ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
        }
        if (x >= undefined) {
                 ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
        }
        if (x <= undefined) {
                 ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
        }
    }
    function f5(x: string) {
        switch(x) {
            case null:
                break;
            case undefined:
                break;
            default:
                return;
        }
    }
    